# Indistocks

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
indistocks-db/: Cargo.toml
indistocks-db/src/: lib.rs
indistocks-db/src/db/: downloads.rs  mod.rs  operations.rs  schema.rs
indistocks-db/src/models/: mod.rs
indistocks-gui/: Cargo.toml
indistocks-gui/src/: app.rs  main.rs
indistocks-gui/src/ui/: main_content.rs  mod.rs  settings.rs  sidebar.rs  stocks.rs  top_nav.rs
scripts/: release.sh
