[workspace]
members = ["indistocks-gui", "indistocks-db"]
resolver = "2"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "gzip", "cookies"] }
csv = "1.3"
zip = "2.1"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
