[package]
name = "indistocks-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
csv = { workspace = true }
zip = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
